--- a/index.html
+++ b/index.html
@@ -1,9 +1,117 @@
 <!doctype HTML>
 <html>
 <head>
-<title>Neighbourhood Map</title>
+	<title>Neighbourhood Map</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="src.css">
 </head>
 <body>
+	<div id = "list">
+	</div>
+	<input id = "search" type="text" placeholder="Search Box">
+	<div id="map"></div>
+	<script>
 
+		var map, infoWindow, markers, service, request;
+		function initAutocomplete() {
+
+			var loc = {lat: 37.279518, lng: -121.867905};
+			//create the map
+			map = new google.maps.Map(document.getElementById('map'), {
+				center: loc,
+				zoom: 11,
+				mapTypeId: google.maps.MapTypeId.ROADMAP
+			});
+
+			//create the search box
+			var input = document.getElementById('search');
+			var searchBox = new google.maps.places.SearchBox(input);
+			map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+
+			//create the markers
+			markers = [];
+			searchBox.addListener('places_changed', function() {
+				var place = searchBox.getPlaces();
+				console.log(place);
+				if(place.length == 0) {
+					return;
+				}
+
+				//clear out the old markers
+				markers.forEach(function(marker) {
+					marker.setMap(null);
+				});
+
+				//create the infowindow
+				infoWindow = new google.maps.InfoWindow();
+				service = new google.maps.places.PlacesService(map);
+				request = {
+					location: place[0].geometry.location,
+					radius: 500,
+					type: ['gas_station']
+				};
+
+				service.nearbySearch(request, callback);
+
+				function callback(results, status) {
+					if(status === google.maps.places.PlacesServiceStatus.OK) {
+						for(var i = 0; i < results.length; i++) {
+							createMarker(results[i]);
+						}
+					}
+				}
+
+				//var bounds = new google.maps.LatLngBounds();
+				/*places.forEach(function(place) {
+					var icon = {
+						url: place.icon,
+						size: new google.maps.Size(71,71),
+						origin: new google.maps.Point(0,0),
+						anchor: new google.maps.Point(17,34),
+						scaledSize: new google.maps.Size(25,25)
+					};*/
+
+				var icon = {
+					url: place.icon,
+					size: new google.maps.Size(71,71),
+					origin: new google.maps.Point(0,0),
+					anchor: new google.maps.Point(17,34),
+					scaledSize: new google.maps.Size(25,25)
+				};
+
+				function createMarker(result) {
+
+					markers.push(new google.maps.Marker({
+						map: map,
+						icon: icon,
+						title: result.name,
+						position: result.geometry.location
+					}));
+
+					markers.forEach(function(marker) {
+						marker.addListener('click', function() {
+							infoWindow.setContent('<h3>' + result.name + '</h3>' +  'Location Found');
+							infoWindow.open(map, marker);
+						});
+					});
+				}
+
+				
+
+				if(place.geometry.viewport) {
+					bounds.union(place.geometry.viewport);
+				}
+				else {
+					bounds.extend(place.geometry.location);
+				}
+				map.fitBounds(bounds);
+			});
+		}
+
+
+	</script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj_tDesKmr01G7wWzwLp3lRtVz0v6H0Fs&libraries=places&callback=initAutocomplete"
+         async defer></script>
 </body>
 </html>
