--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,6 @@
 
 <script src="js/app.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj_tDesKmr01G7wWzwLp3lRtVz0v6H0Fs&libraries=places&callback=initAutocomplete" onerror="mapError()" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj_tDesKmr01G7wWzwLp3lRtVz0v6H0Fs&v3&callback=initAutocomplete" onerror="mapError()" async defer></script>
 </body>
 </html>
