--- a/src/index.html
+++ b/src/index.html
@@ -17,21 +17,21 @@
     	<h1><i id="nav-button" class="nav-button fa fa-lg fa-arrow-circle-up" data-bind="click: navClick, css: {'fa-arrow-circle-down': isNavClosed}"></i> Explore sF!!</h1>
     </header>
 	<div class="menu speed" data-bind="css: {'moveUp': isNavClosed()}">
-		<label for = "search"><h3>Filter your Search:</h3>
-			<input data-bind="textInput: filter, valueUpdate:'afterkeydown'" autocomplete="off" id = "search" type="text" placeholder="Enter the location"><i class="glyphicon glyphicon-remove" data-bind="click: emptyInputBox"></i>
+		<label for="search"><h3>Filter your Search:</h3>
+			<input data-bind="textInput: filter, event:{mouseover:emptyInputBox}, valueUpdate:'afterkeydown'" autocomplete="off" id="search" type="text" placeholder="Enter the location"><i class="glyphicon glyphicon-remove" data-bind="click: emptyInputBox"></i>
 		</label>
 		<div id="list">
 			<h3>Pick Your Favorite Spot:</h3>
-			<ul data-bind="foreach: filteredplaceList, visible: filteredplaceList().length > 0" id = "places"> 
-				<li data-bind= "text: name, click: $root.itemClick"></li>
+			<ul data-bind="foreach: filteredplaceList, visible: filteredplaceList().length > 0" id="places"> 
+				<li data-bind="text: name, click: $root.itemClick"></li>
 			</ul>
 		</div>
 	</div>
-	<main id ="map"></main>
-	<div id = "map-error" class="map-error"></div>
+	<main id="map"></main>
+	<div id="map-error" class="map-error"></div>
 
 <script src="js/app.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj_tDesKmr01G7wWzwLp3lRtVz0v6H0Fs&v3&callback=initAutocomplete" onerror="mapError()" async defer></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj_tDesKmr01G7wWzwLp3lRtVz0v6H0Fs&v3&callback=initAutocomplete" onerror="mapError()"></script>
 </body>
 </html>
